adapted html for skills section and fixed misalignment of bars and their titles; added responsiveness to skilss and experience section

--- a/css/about_section.css
+++ b/css/about_section.css
@@ -43,7 +43,7 @@
 }
 
 .col p {
-  font-size: 1rem;
+  font-size: 1.1rem;
 }
 
 .col {
