--- a/css/body_all_sections.css
+++ b/css/body_all_sections.css
@@ -33,9 +33,14 @@ html {
 #about,
 #experience,
 #contact,
-#skills,
 #portfolio {
   min-height: 45em;
+  padding: 4% 6%;
+  overflow: hidden;
+}
+
+#skills {
+  min-height: 35em;
   padding: 4% 6%;
   overflow: hidden;
 }
