--- a/css/experience.css
+++ b/css/experience.css
@@ -4,6 +4,12 @@
   margin: 0% 0;
 }
 
+.timeline-title h2 {
+  font-size: 2em;
+  position: relative;
+  left: 2.5%;
+}
+
 .experience-section {
   display: relative;
   padding: 0% 0;
@@ -17,13 +23,13 @@
   position: relative;
   max-width: 100%;
   margin: 100px auto;
+  margin-top: 4%;
 }
 
 .timeline-container {
   padding: 10px 27px;
   position: relative;
   width: 45.7%;
-  animation: movedown 1s linear forwards;
   opacity: 1;
 }
 
@@ -31,6 +37,7 @@
   padding: 10px 10px;
   background: #fff;
   font-size: 0.75rem;
+  margin-bottom: -3%;
 }
 
 .text-box h3 {
@@ -60,10 +67,11 @@
   content: "";
   position: absolute;
   width: 6px;
-  height: 100%;
+  height: 95%;
+  top: 30%;
   background: #fff;
   border-radius: 10px;
-  top: 3.5%;
+  top: 8%;
   left: 50%;
   margin-left: -3px;
   z-index: -1;
@@ -98,4 +106,55 @@
   height: 0;
   margin: 20px 0;
   border-top: 4px dashed #ccc;
+}
+
+@media (max-width: 1200px) {
+  .experience-section {
+    margin: 50px auto;
+  }
+  .experience-section::before {
+    left: 3.5%;
+    height: 95%;
+    top: 6%;
+  }
+  .timeline-container {
+    width: 100%;
+    padding-left: 8%;
+    padding-right: 0%;
+    box-sizing: border-box;
+  }
+
+  .text-box {
+    padding: 5% 4%;
+    font-size: 0.8rem;
+  }
+
+  .text-box h3 {
+    font-size: 0.8rem;
+    margin: 0;
+  }
+
+  .text-box h2 {
+    font-size: 0.7rem;
+    margin: 0;
+  }
+
+  .text-box small {
+    display: inline-block;
+    font-size: 0.6rem;
+  }
+
+  .right-container {
+    left: 0;
+  }
+  .left-container-arrow,
+  .right-container-arrow,
+  .dashed-line {
+    display: none;
+  }
+
+  .timeline-title h2 {
+    position: relative;
+    left: 10%;
+  }
 }
