--- a/css/skills_section.css
+++ b/css/skills_section.css
@@ -1,78 +1,71 @@
 .skill-container {
-  margin: -3% 0 0;
-  padding: 0 0;
-  max-width: 100%;
-  flex-wrap: wrap;
+  padding: 0% 0;
 }
 
-/* .skill-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%; 
-} */
+.skills h2 {
+  font-size: 2rem;
+}
 
-/* .centered-text {
+.column-title h3 {
+  font-size: 1.5rem;
+}
+
+.skill-type h5 {
+  margin: 0 10px 0 0;
+  font-size: 1.1rem;
+  min-width: 100px;
+}
+
+.column-description p {
+  font-size: 1.1rem;
+}
+
+.column-description {
+  margin-bottom: 40px;
+}
+
+.skill-section-description p {
+  font-size: 1.1rem;
+}
+
+.skill-section-description {
+  margin-bottom: 60px;
+}
+
+.skill-centered-text {
   text-align: center;
-} */
+}
 
-.section-description {
-  margin: -2% 0 0;
+.columns-wrapper {
   display: flex;
-  font-size: 0.9rem;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .left-column,
 .right-column {
-  width: 50%;
-  padding: 0 0;
+  width: 45%;
   box-sizing: border-box;
-  float: left;
-  margin: 2% 0 0;
-}
-
-.right-column {
-  width: 50%;
-  padding: 0 0;
-  box-sizing: border-box;
-  float: left;
-  margin: 2% 0 0;
+  margin: 0;
 }
 
 .skill-type {
-  margin-bottom: 2%;
-}
-
-.skill-type h3 {
-  margin: -1% 0 1%;
-  padding-right: 1%;
-  font-size: 1.25rem;
-}
-
-.skill-type h5 {
-  margin: 1% 0 0;
-  padding-right: 1%;
-  font-size: 0.9rem;
-}
-
-.column-description {
-  text-align: left;
-  margin: 1% 0 3%;
-  margin-right: 10%;
-  padding-right: 0;
-  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  position: relative;
 }
 
 .bar {
-  position: relative;
-  height: 18px;
-  left: 20%;
+  position: absolute;
+  top: 0;
+  left: 120px;
+  height: 25px;
   background: #f4f4f4;
   border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   overflow: hidden;
-  margin: -2.2% -2% 2%;
-  width: 71.5%;
+  width: calc(95% - 110px);
 }
 
 .bar span {
@@ -92,8 +85,20 @@
   content: attr(data-width);
   position: absolute;
   transform: translateY(-50%);
-  font-size: 0.6rem;
+  font-size: 0.7rem;
   top: 50%;
   right: 1%;
   color: #fff;
+}
+
+@media screen and (max-width: 700px) {
+  .left-column,
+  .right-column {
+    width: 100%;
+  }
+
+  .bar {
+    left: 0;
+    width: 100%;
+  }
 }
